Partially implemented test for OrderService, fixed repairer set problem